# IBM-Data-Science-Professional-Certificate

./: .gitignore  README.md  SandBox.ipynb  pyproject.toml
Course 10 Capstone Project/: 1 labs-data-collection-api.ipynb  2 labs-webscraping.ipynb  3 labs-data-wrangling.ipynb  4 labs-eda-sql.ipynb  5 labs-eda-dataviz.ipynb  6 labs-dataviz-folium.ipynb  7-labs-dash-app.py  8-labs-machine-learning.ipynb
Course 2/: Jupyter_Notebook.ipynb
Course 3/: DS0103EN-Exercise-From-Modeling-to-Evaluation.ipynb  DS0103EN-Exercise-From-Problem-to-Approach.ipynb  DS0103EN-Exercise-From-Understanding-to-Preparation.ipynb  DS0103EN-Review-From-Requirements-to-Collection.ipynb
Course 4/: Analyzing a real World Data Set sqlite.ipynb  Final Assignment.ipynb  FinalDB.db  RealWorldData.db  Working with a real world data-set.ipynb  db2 connection.ipynb  local database sqlite.ipynb  socioeconomic.db  sql magic sqlite.ipynb
Course 5/: API_1st_lab.ipynb  API_2nd_lab.ipynb  Numpy1D.ipynb  Pandas_LoadData.ipynb  ReadFile.ipynb  Tuples.ipynb  WebScraping_Review_Lab.ipynb  WriteFile.ipynb  Write_your_first_python_code.ipynb
Course 5 Python for Data Science/: Classes.ipynb  Conditions.ipynb  Dictionaries.ipynb  ExcecptionHandling.ipynb  Functions .ipynb  Lists.ipynb  Numpy2D.ipynb  Pandas_Practice.ipynb  Requests_HTTP.ipynb  Sets.ipynb  Strings.ipynb  WebScraping_Review_Lab.ipynb  inactive.txt  members.txt
Course 6/: Final Assignment Webscraping.ipynb  Final Assignment.ipynb  Final_Assignment Library.ipynb
Course 7/: DA0101EN-2-Review-Data-Wrangling.ipynb  House_Sales_in_King_Count_USA.ipynb  Review-Data-Wrangling.ipynb  Review-Exploratory-Data-Analysis.ipynb  Review-Introduction.ipynb  Review-Model-Development.ipynb  Review-Model-Evaluation-and-Refinement.ipynb
Course 8 Data Visualization/: 4.3_Plotly_Basics.ipynb  4.5_Dash_Basics.py  4.6_Dash_Interactivity.py  4.7_Flights_Details.py  Exercise-Area-Plots-Histograms-and-Bar-Charts.ipynb  Exercise-Pie-Charts-Box-Plots-Scatter-Plots-and-Bubble-Plots.ipynb  Exercise-Waffle-Charts-Word-Clouds-and-Regression-Plots.ipynb  Generating-Maps-in-Python.ipynb  Introduction-to-Matplotlib-and-Line-Plots.ipynb  (+2 more)
(+18 files in other folders)
