[tool.poetry]
name = "ibm-data-science"
version = "0.1.0"
description = ""
authors = ["Madbubbl3 <hellinsylvain@gmail.com>"]
readme = "README.md"
packages = [{include = "ibm_data_science"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
numpy = "^1.23.3"
seaborn = "^0.12.0"
yfinance = "^0.1.75"
jupyter = "^1.0.0"
html5lib = "^1.1"
lxml = "^4.9.1"
plotly = "^5.10.0"
requests = "^2.28.1"
python-decouple = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
