[tool.poetry]
name = "ibm-data-science"
version = "0.1.0"
description = ""
authors = ["Madbubbl3 <hellinsylvain@gmail.com>"]
readme = "README.md"
packages = [{include = "ibm_data_science"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
numpy = "^1.23.3"
seaborn = "^0.12.0"
yfinance = "^0.1.75"
jupyter = "^1.0.0"
html5lib = "^1.1"
lxml = "^4.9.1"
plotly = "^5.10.0"
requests = "^2.28.1"
python-decouple = "^3.6"
scipy = "^1.9.2"
sklearn = "^0.0"
openpyxl = "^3.0.10"
scikit-learn = "^1.1.3"
pywaffle = "^1.1.0"
wordcloud = "1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
