[tool.poetry]
name = "ibm-data-science"
version = "0.1.0"
description = ""
authors = ["Madbubbl3 <hellinsylvain@gmail.com>"]
readme = "README.md"
packages = [{include = "ibm_data_science"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
numpy = "^1.23.3"
seaborn = "^0.12.0"
yfinance = "^0.1.75"
jupyter = "^1.0.0"
html5lib = "^1.1"
lxml = "^4.9.1"
plotly = "^5.10.0"
requests = "^2.28.1"
python-decouple = "^3.6"
scipy = "^1.9.2"
sklearn = "^0.0"
openpyxl = "^3.0.10"
scikit-learn = "^1.1.3"
pywaffle = "^1.1.0"
wordcloud = "1.8.1"
folium = "^0.13.0"
dash = "^2.7.0"
gunicorn = "^20.1.0"
notebook = "^6.5.2"
dtreeviz = "^1.4.1"
pydotplus = "^2.0.2"
graphviz = "^0.20.1"
pydot = "^1.4.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
